	PR c++/11174 	* init.c (build_offset_ref): Perform access checking for 	pointer to member correctly.

* g++.dg/parse/access4.C: New test.
	* g++.dg/parse/access5.C: Likewise.
	* g++.old-deja/g++.jason/access17.C: Adjust error message.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@70566 138bc75d-0d04-0410-961f-82ee72b054a4