gcc/testsuite/g++.dg/parse/access4.C
@@ -1,0 +1,20 @@
+// { dg-do compile }
+
+// Origin: Mike Reed <mike.reed@amadron.com>
+
+// PR c++/11174: Access checking of pointer-to-member function
+
+class A {
+protected:
+  void foo() {}			// { dg-error "protected" }
+public:
+  A();
+};
+
+class B : public A {
+  void bar() {
+    A a;
+    void (A::*pmf)() = &A::foo;	// { dg-error "this context" }
+    (a.*pmf)();
+  }
+};
